# climasus_readdbc_py

./: .gitignore  404.html  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
docs/: api-reference.md  gen_ref_pages.py  index.md  installation.md  usage.md
docs/assets/: climasus.css  climasus.js
installation/: index.html
notebooks/: teste_ftp_datasus_readdbc.ipynb
reference/SUMMARY/: index.html
reference/climasus_readdbc/: index.html
reference/climasus_readdbc_py/: index.html
reference/readdbc/: index.html
search/: search_index.json
src/climasus_readdbc/: __init__.py  _blast.py  _dbf.py
src/climasus_readdbc_py/: __init__.py  _blast.py  _dbf.py
src/readdbc/: __init__.py  _blast.py  _dbf.py
tests/: test_blast.py  test_dbf.py
usage/: index.html
