[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readdbc"
version = "0.1.0"
description = "Pure-Python reader for DATASUS .dbc files (blast-compressed dBASE III)"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ClimaSUS Team" }]
keywords = ["datasus", "dbc", "dbf", "sus", "blast", "pkware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
